k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: estate-agent
spec:
  replicas: 2
  selector:
    matchLabels:
      app: estate-agent
  template:
    metadata:
      labels:
        app: estate-agent
    spec:
      containers:
        - name: backend
          image: nourajaz/backend-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
